fixes spacing issue with modal.content div

--- a/app/assets/stylesheets/zmain_page.scss
+++ b/app/assets/stylesheets/zmain_page.scss
@@ -450,8 +450,6 @@ body.modal-open[style] {
   display:inline-block;
   align-self: center;
   overflow: scroll;
-  max-height: 95vh;
-  min-width: 70vw;
 }
 
 .modal-body {
